kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: naliniselv/vprofiledb
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
          name: vprodb-port
        volumeMount:
        -  name: vprofile-storage
           mountPath: /var/lib/mysql
      volumes:
      -  name: vprofile-storage
         persistentVolumeClaim:
           claimName: vprofile-storage-dbpvc
