kubedefs/mcdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromc
  template:
    metadata:
      labels:
        app: vpromc
    spec:
      containers:
      - name: vpromc
        image: memcached
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        imagePullPolicy: Always
        ports:
        - name: vpromc-port
          containerPort: 11211
