kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vprormq

spec:
  replicas: 1
  selector:
    matchLabels:
      app:  vprormq

  template:
    metadata:
      labels:
        app: vprormq
    spec:
      containers:
      - name:  vprormq
        image: rabbitmq
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        imagePullPolicy: Always
        ports:
        - name:  vprormq-port
          containerPort: 5672
