kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    nginx.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.app.hko.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vproapp
            port: 
              number: 8080
